--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,16 +3,51 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"> <!-- Bulma -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Google Icon Fonts -->
+  <link rel="stylesheet" href="/assets/styles.css">
+  
   {% seo %}
 </head>
 <body>
-{{ content }}
+  <header>
+    <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+      <div class="container">
+        <div class="navbar-brand">
+          <div class="navbar-item">
+            <span class="first-name">Arya</span>
+            &nbsp;
+            <span class="last-name">Das</span>
+          </div>
+        </div>
+
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+
+        <div class="navbar-menu">
+          <div class="navbar-end">
+            <a class="navbar-item">About</a>
+            <a class="navbar-item">Experience</a>
+            <a class="navbar-item">Education</a>
+            <a class="navbar-item">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+  
+  <main>
+    {{ content }}
+  </main>
 </body>
 </html>
