--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,20 +1,40 @@
 :root {
   --grey-lighter: hsl(0, 0%, 86%);
+  --dark: hsl(0, 0%, 21%);
 }
 
-.navbar-brand {
+main {
+  min-height: calc(100vh - 6.8rem);
+}
+
+#navbar-name {
   text-transform: uppercase;
   font-weight: bold;
 }
 
-.navbar-brand .navbar-item {
+#navbar-name .navbar-item {
   align-items: baseline;
 }
 
-.navbar-brand .first-name {
+#navbar-name .first-name {
   font-size: 1.3em;
 }
 
-.navbar-brand .last-name {
+#navbar-name .last-name {
   color: var(--grey-lighter);
+}
+
+.is-256x256 {
+  width: 256px;
+  height: 256px;
+}
+
+footer {
+  background-color: var(--dark) !important;
+  color: var(--grey-lighter) !important;
+  padding: 1rem !important;
+}
+
+footer a {
+  color: var(--grey-lighter) !important;
 }
