Added link highlighting; added CV; fixed minor bugs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,16 +26,16 @@
 </head>
 <body class="has-navbar-fixed-top">
   <header>
-    <nav class="navbar is-dark is-fixed-top" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-dark is-fixed-top" aria-label="main navigation">
       <div class="container is-max-desktop">
         <div class="navbar-brand" id="navbar-name">
-          <div class="navbar-item">
+          <a class="navbar-item" href="/">
             <span class="first-name">Arya</span>
             &nbsp;
             <span class="last-name">Das</span>
-          </div>
+          </a>
           
-          <a role="button" id="navBurger" class="navbar-burger" aria-label="menu" aria-expanded="false">
+          <a role="button" id="navBurger" class="navbar-burger" data-target="navMenu" aria-label="menu" aria-expanded="false">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
