dec 2023 review update

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,10 +44,11 @@
 
         <div class="navbar-menu" id="navMenu">
           <div class="navbar-end">
-            <a class="navbar-item" href="/#about">About</a>
-            <a class="navbar-item" href="/#experience">Experience</a>
-            <a class="navbar-item" href="/#education">Education</a>
-            <a class="navbar-item" href="/#skills">Skills</a>
+            <!-- <a class="navbar-item" href="/#about">About</a> -->
+            <a class="navbar-item" href="/#research">Research</a>
+            <a class="navbar-item" href="/#publications">Publications</a>
+            <a class="navbar-item" href="/#teaching">Teaching</a>
+            <a class="navbar-item" href="/#experience">Resume</a>
             <a class="navbar-item" href="/#contact">Contact</a>
           </div>
         </div>
@@ -75,7 +76,7 @@
           <a class="icon" href="https://twitter.com/aryadas98" target="_blank" rel="nofollow noopener noreferrer">
             <i class="fa-brands fa-twitter"></i>
           </a>
-          <a class="icon" href="mailto:arya@aryadas.dev" target="_blank" rel="nofollow noopener noreferrer">
+          <a class="icon" href="mailto:aryadas98@gmail.com" target="_blank" rel="nofollow noopener noreferrer">
             <i class="fa-solid fa-envelope"></i>
           </a>
         </div>
